<resources>
    <string name="app_name">BlueSIDE</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_camera"></string>
    <string name="title_flash">FLASH</string>
    <string name="title_hdr">HDR</string>
    <string name="title_detection">DETECTION</string>
    <string name="title_confirm">CONFIRM</string>
    <string name="title_analysis_ldr">ANALYSIS</string>

    <string name="test">test</string>
    <string name="add_patient">Add patient</string>
    <string name="search">Search</string>
    <string name="language">Change language</string>
    <string name="capture">Take photos</string>
    <string name="otherOptions">Other options</string>
    <string name="english_v">English</string>
    <string name="french_v">Français</string>
    <string-array name="languageSpinner">
        <item>English</item>
        <item>Français</item>
    </string-array>

    <string name="title_activity_add_patient">AddPatientActivity</string>
    <string name="id">Patient ID  </string>
    <string name="name">Name </string>
    <string name="first_name">First name </string>
    <string name="birth">Date of birth </string>
    <string name="age">Age</string>
    <string name="phone">Phone number </string>
    <string name="mail">E-mail adress </string>
    <string name="sex">Sex </string>
    <string name="address">Address </string>
    <string name="height">Height (m) </string>
    <string name="weight">Weight (kg) </string>
    <string name="imc">Body mass index BMI (kg/m²)</string>
    <string name="hb">Hemoglobin Hb (g/dL) </string>
    <string name="vgm">Mean corpuscular volume MCV (fL) </string>
    <string name="tcmh">Mean corpuscular hemoglobin MCH (pg) </string>
    <string name="idr_cv">Red blood cell distribution width RDW-CV (%) </string>
    <string name="hypo">Percentage of hypochromic red blood cells (%Hypo) </string>
    <string name="ret_he">Reticulocyte hemoglobin equivalent Ret-He (fL) </string>
    <string name="platelet">Platelet (10\u2079/L) </string>
    <string name="ferritin">Ferritin (µg/L) </string>
    <string name="transferrin">Transferrin (g/L) </string>
    <string name="serum_iron">Serum Iron </string>
    <string name="cst">Transferrin saturation coefficient TSC (%) </string>
    <string name="fibrinogen">Fibrinogen (g/L) </string>
    <string name="crp">C-reactive protein CRP (mg/L) </string>
    <string name="others">Others </string>
    <string name="deficiency">Iron deficiency</string>
    <string name="deficiencyClear">Deficiency clear</string>
    <string name="noDeficiency">No deficiency</string>
    <string name="deficiencyUnclear">Deficiency unclear</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="nombre_acquisition">Number of acquisition</string>

    <string name="addNonAnonWarning">Warning ! You won\'t be able to change patient\'s Name and firstName after save !</string>
    <string name="addAnonWarning">Warning ! You won\'t be able to change patient\'s pseudo after save !</string>

    <string name="mail_request">Are you sure you want to send data by mail ? This connection is not secured !</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>

    <string-array name="setGender">
        <item>(none)</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <string-array name="IronUnit">
        <item>(unit)</item>
        <item>µmol/L</item>
        <item>mg/L</item>
    </string-array>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_profil_patient">ProfilPatient</string>

    <string name="save_dialog_title">Patient saved successfully !</string>
    <string name="save_dialog_question">Do you want to see the patient\'s profile?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="save_dialog_button_add">Add a new patient</string>

    <string name="secured">secured</string>
    <string name="title_patient_list">Patients</string>
    <string name="title_patient_detail">Patient Detail</string>

    <string name="patient_profil">Check patient profiles</string>
    <string name="patient_list">Patients list</string>
    <string name="title_activity_edit_patient">EditPatient</string>

    <string name="update">Patient\'s profile updated successfully</string>

    <string name="home">Home</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_list_patient">ListPatient</string>

    <string name="delete">Delete</string>
    <string name="patient">Patient</string>
    <string name="new_patient">add patient</string>
    <string name="delete_patient">Delete patient</string>
    <string name="delete_image">Delete images</string>
    <string name="delete_patient_msg">Do you really want to delete this patient\'s profile ?</string>
    <string name="patient_deleted">Patient deleted</string>
    <string name="images_deleted">Images deleted</string>
    <string name="delete_images_msg">Do you want to delete the images associated with this patient ?</string>
    <string name="empty_fields">Empty fields</string>
    <string name="title_activity_export_db">ExportDBActivity</string>
    <string name="export_db">Export database by mail</string>
    <string name="export_database_on_ftp">Export database on server</string>

    <string name="patient_table">PATIENT TABLE</string>

    <string name="send_mail">Send mail</string>
    <string name="mail_address">mail to :</string>
    <string name="mail_subject">Subject :</string>
    <string name="mail_body">Message : </string>
    <string name="mail_subject_hint">Subject</string>
    <string name="error">Error</string>

    <string name="title_activity_choose_protocol">chooseProtocolActivity</string>
    <string name="title_activity_add_patient_anonym">AddPatientAnonym</string>

    <string name="choose_protocol_title">Patient protocol</string>
    <string name="choose_protocol_message">Choose the patient protocol</string>
    <string name="choose_protocol_anonym">anonymous protocol</string>
    <string name="choose_protocol_not_anonym">non-anonymous protocol</string>
    <string name="title_activity_profil_anonym_patient">ProfilAnonymPatient</string>
    <string name="title_activity_edit_anonym_patient">EditAnonymPatient</string>

    <string name="export_non_anonym">Export non anonyme patients\' profiles</string>
    <string name="export_anonym">Export anonyme patients\' profiles</string>
    <string name="export_all">Export all patients\' profiles</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fragment">FragmentActivity</string>

    <string name="title_activity_list_profile">ListProfile</string>
    <string name="pseudo">Identification (File reference)</string>
    <string name="title_activity_list_profile2">ListProfile2</string>

    <string name="condition_name">Name is required</string>
    <string name="condition_mail">Incorrect email address</string>
    <string name="condition_date">Incorrect date format</string>
    <string name="condition_age">Incorrect Age</string>
    <string name="condition_phone">Incorrect phone number</string>
    <string name="condition_pseudo">Identifier is required</string>
    <string name="condition_pseudo_incorrectChars">Special chars forbidden !</string>
    <string name="condition_height">Incorrect height</string>
    <string name="condition_weight">Incorrect weight</string>
    <string name="condition_idr_cv">Incorrect : IDR-CV &lt; 100%</string>
    <string name="condition_hypo">Incorrect : Hypo &lt; 100%</string>
    <string name="condition_transferrin">Incorrect : Transferrin &lt; 100%</string>
    <string name="condition_cst">Incorrect: CST &lt; 100%</string>

    <string name="patient_not_deleted">Error while deleting patient</string>

    <string name="camera_dialog_title">Directory name</string>

    <string name="none">(none)</string>


    <string name="choose_patient">Choose patient</string>
    <string name="enter_directory">Enter directory name</string>
    <string name="saving_images">Saving images...</string>
    <string name="process_hdr">Processing hdr image...</string>

    <string name="senddata">Do you want to send data ?</string>
    <string name="sending_data">Sending data...</string>
    <string name="no_connection">You are not online</string>
    <string name="first_name_error">First-name is required</string>
    <string name="grid">Grid</string>
    <string name="gridDisplay">gridDisplay</string>
    <string name="prefs">prefs</string>

</resources>
