<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".camera.CameraActivity">

    <!--
    <item
        android:id="@+id/flash"
        android:orderInCategory="1"
        android:title="@string/title_flash"
        app:showAsAction="always" />
    -->

    <item
        android:id="@+id/detect"
        android:orderInCategory="1"
        android:title="@string/title_detection"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/confirm"
        android:orderInCategory="2"
        android:title="@string/title_confirm"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/hdr"
        android:orderInCategory="3"
        android:title="@string/title_hdr"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/analysisLDR"
        android:orderInCategory="4"
        android:title="@string/title_analysis_ldr"
        app:showAsAction="ifRoom" />

</menu>
