<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/takePicture"
        android:title="Prendre photo"
        app:showAsAction="always"
        android:icon="@drawable/ic_photo_camera_white"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/delete_patient"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        android:orderInCategory="4"
        app:showAsAction="always"/>
    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        android:orderInCategory="3"
        app:showAsAction="always" />
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:visible="false"/>
</menu>