<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.isit_mp3c.projet.patient.EditAnonymPatient"
    tools:showIn="@layout/activity_edit_anonym_patient">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textview0"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/pseudo"
            android:layout_column="0"
            android:layout_row="0">
        </TextView>
        <EditText
            android:id="@+id/id_patient"
            android:textSize="15sp"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="0"/>



        <TextView
            android:id="@+id/textview7"
            android:text="@string/sex"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1">
        </TextView>
        <Spinner
            android:id="@+id/sexe_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set the gender"
            android:layout_column="1"
            android:layout_row="1"/>

        <TextView
            android:id="@+id/textviewAge"
            android:text="@string/age"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2">
        </TextView>
        <EditText
            android:id="@+id/age_patient"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="2"/>


        <TextView
            android:id="@+id/textview8"
            android:text="@string/height"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3">
        </TextView>
        <EditText
            android:id="@+id/height_patient"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="3"/>



        <TextView
            android:id="@+id/textview9"
            android:text="@string/weight"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4">
        </TextView>
        <EditText
            android:id="@+id/weight_patient"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="4"/>

        <TextView
            android:id="@+id/textViewRadioButton"
            android:text="@string/deficiency"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5">
        </TextView>

        <RadioGroup
            android:id="@+id/radioDeficiency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="6">

            <RadioButton android:id="@+id/radioDeficiencyClear"
                android:text="@string/deficiencyClear"
                android:button="@null"
                android:drawableLeft="@android:drawable/btn_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked" />

            <RadioButton android:id="@+id/radioNoDeficiency"
                android:text="@string/noDeficiency"
                android:button="@null"
                android:drawableLeft="@android:drawable/btn_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked" />

            <RadioButton android:id="@+id/radioDeficiencyUnclear"
                android:text="@string/deficiencyUnclear"
                android:button="@null"
                android:drawableLeft="@android:drawable/btn_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked" />

        </RadioGroup>

        <TextView
            android:id="@+id/textview10"
            android:text="@string/hb"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="7">
        </TextView>
        <EditText
            android:id="@+id/hb"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="7"/>



        <TextView
            android:id="@+id/textview11"
            android:text="@string/vgm"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="8">
        </TextView>
        <EditText
            android:id="@+id/vgm"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="8"/>



        <TextView
            android:id="@+id/textview12"
            android:text="@string/tcmh"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="9">
        </TextView>
        <EditText
            android:id="@+id/tcmh"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="9"/>



        <TextView
            android:id="@+id/textview13"
            android:text="@string/idr_cv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="10">
        </TextView>
        <EditText
            android:id="@+id/idr_cv"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="10"/>



        <TextView
            android:id="@+id/textview14"
            android:text="@string/hypo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="11">
        </TextView>
        <EditText
            android:id="@+id/hypo"
            android:textSize="15sp"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="11"/>



        <TextView
            android:id="@+id/textview15"
            android:text="@string/ret_he"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="12">
        </TextView>
        <EditText
            android:id="@+id/ret_he"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="12"/>



        <TextView
            android:id="@+id/textview16"
            android:text="@string/platelet"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="13">
        </TextView>
        <EditText
            android:id="@+id/platelet"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="13"/>



        <TextView
            android:id="@+id/textview17"
            android:text="@string/ferritin"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="14">
        </TextView>
        <EditText
            android:id="@+id/ferritin"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="14"/>



        <TextView
            android:id="@+id/textview18"
            android:text="@string/transferrin"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="15">
        </TextView>
        <EditText
            android:id="@+id/transferrin"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="15"/>



        <TextView
            android:id="@+id/textview19"
            android:text="@string/serum_iron"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="16">
        </TextView>
        <EditText
            android:id="@+id/srum_iron"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="16"/>
        <Spinner
            android:id="@+id/iron_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="16"/>



        <TextView
            android:id="@+id/textview20"
            android:text="@string/cst"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="17">
        </TextView>
        <EditText
            android:id="@+id/cst"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="17"/>



        <TextView
            android:id="@+id/textview21"
            android:text="@string/fibrinogen"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="18">
        </TextView>
        <EditText
            android:id="@+id/fibrinogen"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="18"/>



        <TextView
            android:id="@+id/textview22"
            android:text="@string/crp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="19">
        </TextView>
        <EditText
            android:id="@+id/crp"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="19"/>



        <TextView
            android:id="@+id/textview23"
            android:text="@string/others"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="20">
        </TextView>
        <EditText
            android:id="@+id/other"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="20"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_column="0"
            android:layout_row="21"/>
        <Button
            android:id="@+id/update_button"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="1"
            android:layout_row="21"/>


    </GridLayout>

</ScrollView>
