<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.isit_mp3c.projet.exportdb.ExportDBActivity"
    tools:showIn="@layout/activity_export_db">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:id="@+id/gridLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_address"
            android:id="@+id/textview1"
            android:layout_alignBottom="@+id/editText"
            android:layout_toLeftOf="@+id/editText"
            android:layout_toStartOf="@+id/editText"
            android:layout_marginRight="29dp"
            android:layout_marginEnd="29dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mail_address"
            android:layout_below="@+id/create_file_button"
            android:layout_centerHorizontal="true"
            android:hint="address@mail.com"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_subject"
            android:id="@+id/textview2"
            android:layout_alignBottom="@+id/editText"
            android:layout_toLeftOf="@+id/editText"
            android:layout_toStartOf="@+id/editText"
            android:layout_marginRight="29dp"
            android:layout_marginEnd="29dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mail_subject"
            android:layout_below="@+id/create_file_button"
            android:layout_centerHorizontal="true"
            android:hint="@string/mail_subject_hint"
            android:inputType="textEmailSubject"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_body"
            android:id="@+id/textview3"
            android:layout_alignBottom="@+id/editText"
            android:layout_toLeftOf="@+id/editText"
            android:layout_toStartOf="@+id/editText"
            android:layout_marginRight="29dp"
            android:layout_marginEnd="29dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/mail_body"
            android:layout_below="@+id/create_file_button"
            android:layout_alignRight="@+id/create_file_button"
            android:layout_alignEnd="@+id/create_file_button"
            android:layout_marginRight="90dp"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="24dp" />


    </GridLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_anonym"
        android:id="@+id/checkBox_anonym"
        android:layout_below="@+id/gridLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_non_anonym"
        android:id="@+id/checkBox_non_anonym"
        android:layout_below="@+id/checkBox_anonym"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_all"
        android:id="@+id/checkBox_all_db"
        android:layout_below="@+id/checkBox_non_anonym"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:onClick="onCheckboxClicked"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_mail"
        android:id="@+id/send_button"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:onClick="onCheckboxClicked"
        android:layout_below="@+id/checkBox_all_db"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

</RelativeLayout>
